shelf: Don't hide the auto_hide shelf if tap trays inside status area.

Bug: 907660
Change-Id: Ic0b3916328d92a4989be0a9e3b2553986ab4f830
Reviewed-on: https://chromium-review.googlesource.com/c/1347618
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610918}
Former-commit-id: 0395b1c0a02d146f8fe56c6cc7f1bf69b25aad33